Fixed insufficient contrast on a:link and a:hover

--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ body {
 }
 
 a, a:link, a:visited, a:active {
-	color: #6e6e6e;
+	color: #8a8a8a;
 	text-decoration: none;
   transition: background .3s ease-in-out;
   -moz-transition: background .3s ease-in-out;
@@ -119,7 +119,7 @@ a.twitter {
 }
 
 a:hover {
-	background: #6e6e6e;
+	background: #8a8a8a;
 	color: #181818;
 }
 
